<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/len_20">

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/mTilAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mEtAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mTilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_52">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mTilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_52"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mEtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/mBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_20"
        android:layout_marginTop="@dimen/len_20"
        android:layout_marginEnd="@dimen/len_20"
        android:background="@color/grey_100"
        android:shadowColor="@color/blue_500"
        android:text="@string/login"
        android:textSize="@dimen/font_22"
        android:translationZ="@dimen/len_20" />

    <Button
        android:id="@+id/mBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_20"
        android:layout_marginTop="@dimen/len_20"
        android:layout_marginEnd="@dimen/len_20"
        android:background="@null"
        android:elevation="@dimen/len_20"
        android:paddingLeft="@dimen/len_20"
        android:paddingRight="@dimen/len_20"
        android:shadowColor="@color/blue_500"
        android:text="注册"
        android:textColor="@color/red_500"
        android:textSize="@dimen/font_12"
        android:translationZ="@dimen/len_20" />

    <Button
        android:id="@+id/mBtnCollect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_20"
        android:layout_marginTop="@dimen/len_20"
        android:layout_marginEnd="@dimen/len_20"
        android:background="@null"
        android:elevation="@dimen/len_20"
        android:paddingLeft="@dimen/len_20"
        android:paddingRight="@dimen/len_20"
        android:shadowColor="@color/blue_500"
        android:text="@string/register"
        android:textSize="@dimen/font_12"
        android:translationZ="@dimen/len_20" />
</LinearLayout>